[package]
name = "nebula-monero"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
publish = false

[dependencies]
hex = "0.4"
serde_json = "1.0.150"
sha2 = "0.10"
sha3 = "0.10"
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1.0.8"
