[package]
name = "nebula-testnet"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
publish = false

[dependencies]
ed25519-dalek = "2"
hex = "0.4"
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
webpki-roots = "1.0.8"
x509-parser = "0.18.1"
